feat: Add new fields in CheCluster CR to configure Git Services (#1457)
* feat: Add new fields in CheCluster CR to configure Git Services

Signed-off-by: Anatolii Bazko <abazko@redhat.com>

--- a/bundle/next/eclipse-che-preview-openshift/manifests/che-operator.clusterserviceversion.yaml
+++ b/bundle/next/eclipse-che-preview-openshift/manifests/che-operator.clusterserviceversion.yaml
@@ -58,6 +58,7 @@ metadata:
             "components": {},
             "containerRegistry": {},
             "devEnvironments": {},
+            "gitServices": {},
             "networking": {}
           }
         }
@@ -76,7 +77,7 @@ metadata:
     operators.operatorframework.io/project_layout: go.kubebuilder.io/v3
     repository: https://github.com/eclipse-che/che-operator
     support: Eclipse Foundation
-  name: eclipse-che-preview-openshift.v7.53.0-670.next
+  name: eclipse-che-preview-openshift.v7.54.0-673.next
   namespace: placeholder
 spec:
   apiservicedefinitions: {}
@@ -129,6 +130,10 @@ spec:
           - description: Che components configuration.
             displayName: Components
             path: components
+          - description: A configuration that allows users to work with remote Git
+              repositories.
+            displayName: Git Services
+            path: gitServices
           - description: Networking, Che authentication, and TLS configuration.
             displayName: Networking
             path: networking
@@ -136,6 +141,44 @@ spec:
               images.
             displayName: Container registry
             path: containerRegistry
+          - description: Enables users to work with repositories hosted on Bitbucket
+              (bitbucket.org or self-hosted).
+            displayName: Bitbucket
+            path: gitServices.bitbucket
+          - description: 'Kubernetes secret, that contains Base64-encoded Bitbucket
+              OAuth 1.0 or OAuth 2.0 data. For OAuth 1.0: private key, Bitbucket Application
+              link consumer key and Bitbucket Application link shared secret must
+              be stored in `private.key`, `consumer.key` and `shared_secret` keys
+              respectively. See the following page: https://www.eclipse.org/che/docs/stable/administration-guide/configuring-oauth-1-for-a-bitbucket-server/.
+              For OAuth 2.0: Bitbucket OAuth consumer key and Bitbucket OAuth consumer
+              secret must be stored in `id` and `secret` keys respectively. See the
+              following page: https://www.eclipse.org/che/docs/stable/administration-guide/configuring-oauth-2-for-the-bitbucket-cloud/.'
+            displayName: Secret Name
+            path: gitServices.bitbucket[0].secretName
+            x-descriptors:
+              - urn:alm:descriptor:io.kubernetes:Secret
+          - description: Enables users to work with repositories hosted on GitHub
+              (github.com or GitHub Enterprise).
+            displayName: GitHub
+            path: gitServices.github
+          - description: 'Kubernetes secret, that contains Base64-encoded GitHub OAuth
+              Client id and GitHub OAuth Client secret, that stored in `id` and `secret`
+              keys respectively. See the following page: https://www.eclipse.org/che/docs/stable/administration-guide/configuring-oauth-2-for-github/.'
+            displayName: Secret Name
+            path: gitServices.github[0].secretName
+            x-descriptors:
+              - urn:alm:descriptor:io.kubernetes:Secret
+          - description: Enables users to work with repositories hosted on GitLab
+              (gitlab.com or self-hosted).
+            displayName: GitLab
+            path: gitServices.gitlab
+          - description: 'Kubernetes secret, that contains Base64-encoded GitHub Application
+              id and GitLab Application Client secret, that stored in `id` and `secret`
+              keys respectively. See the following page: https://www.eclipse.org/che/docs/stable/administration-guide/configuring-oauth-2-for-gitlab/.'
+            displayName: Secret Name
+            path: gitServices.gitlab[0].secretName
+            x-descriptors:
+              - urn:alm:descriptor:io.kubernetes:Secret
         statusDescriptors:
           - description: Specifies the current phase of the Che deployment.
             displayName: ChePhase
@@ -258,6 +301,48 @@ spec:
             path: devWorkspace.enable
             x-descriptors:
               - urn:alm:descriptor:com.tectonic.ui:booleanSwitch
+          - description: A configuration that allows users to work with remote Git
+              repositories.
+            displayName: Git Services
+            path: gitServices
+          - description: Enables users to work with repositories hosted on Bitbucket
+              (bitbucket.org or self-hosted).
+            displayName: Bitbucket
+            path: gitServices.bitbucket
+          - description: 'Kubernetes secret, that contains Base64-encoded Bitbucket
+              OAuth 1.0 or OAuth 2.0 data. For OAuth 1.0: private key, Bitbucket Application
+              link consumer key and Bitbucket Application link shared secret must
+              be stored in `private.key`, `consumer.key` and `shared_secret` keys
+              respectively. See the following page: https://www.eclipse.org/che/docs/stable/administration-guide/configuring-oauth-1-for-a-bitbucket-server/.
+              For OAuth 2.0: Bitbucket OAuth consumer key and Bitbucket OAuth consumer
+              secret must be stored in `id` and `secret` keys respectively. See the
+              following page: https://www.eclipse.org/che/docs/stable/administration-guide/configuring-oauth-2-for-the-bitbucket-cloud/.'
+            displayName: Secret Name
+            path: gitServices.bitbucket[0].secretName
+            x-descriptors:
+              - urn:alm:descriptor:io.kubernetes:Secret
+          - description: Enables users to work with repositories hosted on GitHub
+              (github.com or GitHub Enterprise).
+            displayName: GitHub
+            path: gitServices.github
+          - description: 'Kubernetes secret, that contains Base64-encoded GitHub OAuth
+              Client id and GitHub OAuth Client secret, that stored in `id` and `secret`
+              keys respectively. See the following page: https://www.eclipse.org/che/docs/stable/administration-guide/configuring-oauth-2-for-github/.'
+            displayName: Secret Name
+            path: gitServices.github[0].secretName
+            x-descriptors:
+              - urn:alm:descriptor:io.kubernetes:Secret
+          - description: Enables users to work with repositories hosted on GitLab
+              (gitlab.com or self-hosted).
+            displayName: GitLab
+            path: gitServices.gitlab
+          - description: 'Kubernetes secret, that contains Base64-encoded GitHub Application
+              id and GitLab Application Client secret, that stored in `id` and `secret`
+              keys respectively. See the following page: https://www.eclipse.org/che/docs/stable/administration-guide/configuring-oauth-2-for-gitlab/.'
+            displayName: Secret Name
+            path: gitServices.gitlab[0].secretName
+            x-descriptors:
+              - urn:alm:descriptor:io.kubernetes:Secret
           - description: Kubernetes Image Puller configuration
             displayName: Kubernetes Image Puller
             path: imagePuller
@@ -1389,8 +1474,29 @@ spec:
   maturity: stable
   provider:
     name: Eclipse Foundation
-  version: 7.53.0-670.next
+  version: 7.54.0-673.next
   webhookdefinitions:
+    - admissionReviewVersions:
+        - v1
+        - v1beta1
+      containerPort: 443
+      deploymentName: che-operator
+      failurePolicy: Fail
+      generateName: vchecluster.kb.io
+      rules:
+        - apiGroups:
+            - org.eclipse.che
+          apiVersions:
+            - v2
+          operations:
+            - CREATE
+            - UPDATE
+          resources:
+            - checlusters
+      sideEffects: None
+      targetPort: 9443
+      type: ValidatingAdmissionWebhook
+      webhookPath: /validate-org-eclipse-che-v2-checluster
     - admissionReviewVersions:
         - v1
         - v2
