--- a/config/manifests/bases/che-operator.clusterserviceversion.yaml
+++ b/config/manifests/bases/che-operator.clusterserviceversion.yaml
@@ -79,12 +79,53 @@ spec:
       - description: Che components configuration.
         displayName: Components
         path: components
+      - description: A configuration that allows users to work with remote Git repositories.
+        displayName: Git Services
+        path: gitServices
       - description: Networking, Che authentication, and TLS configuration.
         displayName: Networking
         path: networking
       - description: Configuration of an alternative registry that stores Che images.
         displayName: Container registry
         path: containerRegistry
+      - description: Enables users to work with repositories hosted on Bitbucket (bitbucket.org
+          or self-hosted).
+        displayName: Bitbucket
+        path: gitServices.bitbucket
+      - description: 'Kubernetes secret, that contains Base64-encoded Bitbucket OAuth
+          1.0 or OAuth 2.0 data. For OAuth 1.0: private key, Bitbucket Application
+          link consumer key and Bitbucket Application link shared secret must be stored
+          in `private.key`, `consumer.key` and `shared_secret` keys respectively.
+          See the following page: https://www.eclipse.org/che/docs/stable/administration-guide/configuring-oauth-1-for-a-bitbucket-server/.
+          For OAuth 2.0: Bitbucket OAuth consumer key and Bitbucket OAuth consumer
+          secret must be stored in `id` and `secret` keys respectively. See the following
+          page: https://www.eclipse.org/che/docs/stable/administration-guide/configuring-oauth-2-for-the-bitbucket-cloud/.'
+        displayName: Secret Name
+        path: gitServices.bitbucket[0].secretName
+        x-descriptors:
+        - urn:alm:descriptor:io.kubernetes:Secret
+      - description: Enables users to work with repositories hosted on GitHub (github.com
+          or GitHub Enterprise).
+        displayName: GitHub
+        path: gitServices.github
+      - description: 'Kubernetes secret, that contains Base64-encoded GitHub OAuth
+          Client id and GitHub OAuth Client secret, that stored in `id` and `secret`
+          keys respectively. See the following page: https://www.eclipse.org/che/docs/stable/administration-guide/configuring-oauth-2-for-github/.'
+        displayName: Secret Name
+        path: gitServices.github[0].secretName
+        x-descriptors:
+        - urn:alm:descriptor:io.kubernetes:Secret
+      - description: Enables users to work with repositories hosted on GitLab (gitlab.com
+          or self-hosted).
+        displayName: GitLab
+        path: gitServices.gitlab
+      - description: 'Kubernetes secret, that contains Base64-encoded GitHub Application
+          id and GitLab Application Client secret, that stored in `id` and `secret`
+          keys respectively. See the following page: https://www.eclipse.org/che/docs/stable/administration-guide/configuring-oauth-2-for-gitlab/.'
+        displayName: Secret Name
+        path: gitServices.gitlab[0].secretName
+        x-descriptors:
+        - urn:alm:descriptor:io.kubernetes:Secret
       statusDescriptors:
       - description: Specifies the current phase of the Che deployment.
         displayName: ChePhase
@@ -207,6 +248,47 @@ spec:
         path: devWorkspace.enable
         x-descriptors:
         - urn:alm:descriptor:com.tectonic.ui:booleanSwitch
+      - description: A configuration that allows users to work with remote Git repositories.
+        displayName: Git Services
+        path: gitServices
+      - description: Enables users to work with repositories hosted on Bitbucket (bitbucket.org
+          or self-hosted).
+        displayName: Bitbucket
+        path: gitServices.bitbucket
+      - description: 'Kubernetes secret, that contains Base64-encoded Bitbucket OAuth
+          1.0 or OAuth 2.0 data. For OAuth 1.0: private key, Bitbucket Application
+          link consumer key and Bitbucket Application link shared secret must be stored
+          in `private.key`, `consumer.key` and `shared_secret` keys respectively.
+          See the following page: https://www.eclipse.org/che/docs/stable/administration-guide/configuring-oauth-1-for-a-bitbucket-server/.
+          For OAuth 2.0: Bitbucket OAuth consumer key and Bitbucket OAuth consumer
+          secret must be stored in `id` and `secret` keys respectively. See the following
+          page: https://www.eclipse.org/che/docs/stable/administration-guide/configuring-oauth-2-for-the-bitbucket-cloud/.'
+        displayName: Secret Name
+        path: gitServices.bitbucket[0].secretName
+        x-descriptors:
+        - urn:alm:descriptor:io.kubernetes:Secret
+      - description: Enables users to work with repositories hosted on GitHub (github.com
+          or GitHub Enterprise).
+        displayName: GitHub
+        path: gitServices.github
+      - description: 'Kubernetes secret, that contains Base64-encoded GitHub OAuth
+          Client id and GitHub OAuth Client secret, that stored in `id` and `secret`
+          keys respectively. See the following page: https://www.eclipse.org/che/docs/stable/administration-guide/configuring-oauth-2-for-github/.'
+        displayName: Secret Name
+        path: gitServices.github[0].secretName
+        x-descriptors:
+        - urn:alm:descriptor:io.kubernetes:Secret
+      - description: Enables users to work with repositories hosted on GitLab (gitlab.com
+          or self-hosted).
+        displayName: GitLab
+        path: gitServices.gitlab
+      - description: 'Kubernetes secret, that contains Base64-encoded GitHub Application
+          id and GitLab Application Client secret, that stored in `id` and `secret`
+          keys respectively. See the following page: https://www.eclipse.org/che/docs/stable/administration-guide/configuring-oauth-2-for-gitlab/.'
+        displayName: Secret Name
+        path: gitServices.gitlab[0].secretName
+        x-descriptors:
+        - urn:alm:descriptor:io.kubernetes:Secret
       - description: Kubernetes Image Puller configuration
         displayName: Kubernetes Image Puller
         path: imagePuller
