--- a/config/crd/bases/org.eclipse.che_checlusters.yaml
+++ b/config/crd/bases/org.eclipse.che_checlusters.yaml
@@ -1097,6 +1097,81 @@ spec:
                 required:
                 - enable
                 type: object
+              gitServices:
+                description: A configuration that allows users to work with remote
+                  Git repositories.
+                properties:
+                  bitbucket:
+                    description: Enables users to work with repositories hosted on
+                      Bitbucket (bitbucket.org or self-hosted).
+                    items:
+                      description: BitBucketService enables users to work with repositories
+                        hosted on Bitbucket (bitbucket.org or self-hosted).
+                      properties:
+                        endpoint:
+                          default: https://bitbucket.org
+                          description: Bitbucket server endpoint URL.
+                          type: string
+                        secretName:
+                          description: 'Kubernetes secret, that contains Base64-encoded
+                            Bitbucket OAuth 1.0 or OAuth 2.0 data. For OAuth 1.0:
+                            private key, Bitbucket Application link consumer key and
+                            Bitbucket Application link shared secret must be stored
+                            in `private.key`, `consumer.key` and `shared_secret` keys
+                            respectively. See the following page: https://www.eclipse.org/che/docs/stable/administration-guide/configuring-oauth-1-for-a-bitbucket-server/.
+                            For OAuth 2.0: Bitbucket OAuth consumer key and Bitbucket
+                            OAuth consumer secret must be stored in `id` and `secret`
+                            keys respectively. See the following page: https://www.eclipse.org/che/docs/stable/administration-guide/configuring-oauth-2-for-the-bitbucket-cloud/.'
+                          type: string
+                      required:
+                      - secretName
+                      type: object
+                    type: array
+                  github:
+                    description: Enables users to work with repositories hosted on
+                      GitHub (github.com or GitHub Enterprise).
+                    items:
+                      description: GitHubService enables users to work with repositories
+                        hosted on GitHub (GitHub.com or GitHub Enterprise).
+                      properties:
+                        endpoint:
+                          default: https://github.com
+                          description: GitHub server endpoint URL.
+                          type: string
+                        secretName:
+                          description: 'Kubernetes secret, that contains Base64-encoded
+                            GitHub OAuth Client id and GitHub OAuth Client secret,
+                            that stored in `id` and `secret` keys respectively. See
+                            the following page: https://www.eclipse.org/che/docs/stable/administration-guide/configuring-oauth-2-for-github/.'
+                          type: string
+                      required:
+                      - endpoint
+                      - secretName
+                      type: object
+                    type: array
+                  gitlab:
+                    description: Enables users to work with repositories hosted on
+                      GitLab (gitlab.com or self-hosted).
+                    items:
+                      description: GitLabService enables users to work with repositories
+                        hosted on GitLab (gitlab.com or self-hosted).
+                      properties:
+                        endpoint:
+                          default: https://gitlab.com
+                          description: GitLab server endpoint URL.
+                          type: string
+                        secretName:
+                          description: 'Kubernetes secret, that contains Base64-encoded
+                            GitHub Application id and GitLab Application Client secret,
+                            that stored in `id` and `secret` keys respectively. See
+                            the following page: https://www.eclipse.org/che/docs/stable/administration-guide/configuring-oauth-2-for-gitlab/.'
+                          type: string
+                      required:
+                      - endpoint
+                      - secretName
+                      type: object
+                    type: array
+                type: object
               imagePuller:
                 description: Kubernetes Image Puller configuration
                 properties:
@@ -4124,8 +4199,7 @@ spec:
                               in a custom resource leads to merging non-proxy hosts
                               lists from the cluster proxy configuration, and the
                               ones defined in the custom resources. See the following
-                              page: https://docs.openshift.com/container-platform/4.4/networking/enable-cluster-wide-proxy.html.
-                              See also the `proxyURL` fields.'
+                              page: https://docs.openshift.com/container-platform/4.4/networking/enable-cluster-wide-proxy.html.'
                             items:
                               type: string
                             type: array
@@ -4138,8 +4212,7 @@ spec:
                               Operator respects OpenShift cluster-wide proxy configuration,
                               defining `url` in a custom resource leads to overriding
                               the cluster proxy configuration. See the following page:
-                              https://docs.openshift.com/container-platform/4.4/networking/enable-cluster-wide-proxy.html.
-                              See also the `proxyPort` and `nonProxyHosts` fields.'
+                              https://docs.openshift.com/container-platform/4.4/networking/enable-cluster-wide-proxy.html.'
                             type: string
                         type: object
                     type: object
@@ -7026,6 +7099,81 @@ spec:
                           label.'
                         type: string
                     type: object
+                type: object
+              gitServices:
+                description: A configuration that allows users to work with remote
+                  Git repositories.
+                properties:
+                  bitbucket:
+                    description: Enables users to work with repositories hosted on
+                      Bitbucket (bitbucket.org or self-hosted).
+                    items:
+                      description: BitBucketService enables users to work with repositories
+                        hosted on Bitbucket (bitbucket.org or self-hosted).
+                      properties:
+                        endpoint:
+                          default: https://bitbucket.org
+                          description: Bitbucket server endpoint URL.
+                          type: string
+                        secretName:
+                          description: 'Kubernetes secret, that contains Base64-encoded
+                            Bitbucket OAuth 1.0 or OAuth 2.0 data. For OAuth 1.0:
+                            private key, Bitbucket Application link consumer key and
+                            Bitbucket Application link shared secret must be stored
+                            in `private.key`, `consumer.key` and `shared_secret` keys
+                            respectively. See the following page: https://www.eclipse.org/che/docs/stable/administration-guide/configuring-oauth-1-for-a-bitbucket-server/.
+                            For OAuth 2.0: Bitbucket OAuth consumer key and Bitbucket
+                            OAuth consumer secret must be stored in `id` and `secret`
+                            keys respectively. See the following page: https://www.eclipse.org/che/docs/stable/administration-guide/configuring-oauth-2-for-the-bitbucket-cloud/.'
+                          type: string
+                      required:
+                      - secretName
+                      type: object
+                    type: array
+                  github:
+                    description: Enables users to work with repositories hosted on
+                      GitHub (github.com or GitHub Enterprise).
+                    items:
+                      description: GitHubService enables users to work with repositories
+                        hosted on GitHub (GitHub.com or GitHub Enterprise).
+                      properties:
+                        endpoint:
+                          default: https://github.com
+                          description: GitHub server endpoint URL.
+                          type: string
+                        secretName:
+                          description: 'Kubernetes secret, that contains Base64-encoded
+                            GitHub OAuth Client id and GitHub OAuth Client secret,
+                            that stored in `id` and `secret` keys respectively. See
+                            the following page: https://www.eclipse.org/che/docs/stable/administration-guide/configuring-oauth-2-for-github/.'
+                          type: string
+                      required:
+                      - endpoint
+                      - secretName
+                      type: object
+                    type: array
+                  gitlab:
+                    description: Enables users to work with repositories hosted on
+                      GitLab (gitlab.com or self-hosted).
+                    items:
+                      description: GitLabService enables users to work with repositories
+                        hosted on GitLab (gitlab.com or self-hosted).
+                      properties:
+                        endpoint:
+                          default: https://gitlab.com
+                          description: GitLab server endpoint URL.
+                          type: string
+                        secretName:
+                          description: 'Kubernetes secret, that contains Base64-encoded
+                            GitHub Application id and GitLab Application Client secret,
+                            that stored in `id` and `secret` keys respectively. See
+                            the following page: https://www.eclipse.org/che/docs/stable/administration-guide/configuring-oauth-2-for-gitlab/.'
+                          type: string
+                      required:
+                      - endpoint
+                      - secretName
+                      type: object
+                    type: array
                 type: object
               networking:
                 default:
