--- a/config/openshift/patches/cainjection_in_webhook.yaml
+++ b/config/openshift/patches/cainjection_in_webhook.yaml
@@ -10,14 +10,9 @@
 #   Red Hat, Inc. - initial API and implementation
 #
 
-resources:
-  - ../crd
-  - ../rbac
-  - ../manager
-  - ../namespace
-  - ../webhook
-
-patchesStrategicMerge:
-  - patches/cainjection_in_checlusters.yaml
-  - patches/cainjection_in_webhook.yaml
-  - patches/service_cert_patch.yaml
+apiVersion: admissionregistration.k8s.io/v1
+kind: ValidatingWebhookConfiguration
+metadata:
+  name: org.eclipse.che
+  annotations:
+    service.beta.openshift.io/inject-cabundle: "true"
