--- a/config/rbac/role_binding.yaml
+++ b/config/rbac/role_binding.yaml
@@ -14,6 +14,7 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
 metadata:
   name: che-operator
+  namespace: eclipse-che
   labels:
     app.kubernetes.io/name: che
     app.kubernetes.io/instance: che
