--- a/bundle/next/eclipse-che-preview-openshift/manifests/che-operator-leader-election_rbac.authorization.k8s.io_v1_role.yaml
+++ b/bundle/next/eclipse-che-preview-openshift/manifests/che-operator-leader-election_rbac.authorization.k8s.io_v1_role.yaml
@@ -11,20 +11,44 @@
 #
 
 apiVersion: rbac.authorization.k8s.io/v1
-kind: RoleBinding
+kind: Role
 metadata:
+  creationTimestamp: null
   labels:
     app.kubernetes.io/component: che-operator
     app.kubernetes.io/instance: che
     app.kubernetes.io/name: che
     app.kubernetes.io/part-of: che.eclipse.org
-  name: che-operator
-  namespace: eclipse-che
-roleRef:
-  apiGroup: rbac.authorization.k8s.io
-  kind: Role
-  name: che-operator
-subjects:
-- kind: ServiceAccount
-  name: che-operator
-  namespace: eclipse-che
+  name: che-operator-leader-election
+rules:
+- apiGroups:
+  - ""
+  resources:
+  - configmaps
+  verbs:
+  - get
+  - list
+  - watch
+  - create
+  - update
+  - patch
+  - delete
+- apiGroups:
+  - coordination.k8s.io
+  resources:
+  - leases
+  verbs:
+  - get
+  - list
+  - watch
+  - create
+  - update
+  - patch
+  - delete
+- apiGroups:
+  - ""
+  resources:
+  - events
+  verbs:
+  - create
+  - patch
