--- a/bundle/next/eclipse-che-preview-openshift/manifests/che-operator-leader-election_rbac.authorization.k8s.io_v1_rolebinding.yaml
+++ b/bundle/next/eclipse-che-preview-openshift/manifests/che-operator-leader-election_rbac.authorization.k8s.io_v1_rolebinding.yaml
@@ -13,17 +13,17 @@
 apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
 metadata:
+  creationTimestamp: null
   labels:
     app.kubernetes.io/component: che-operator
     app.kubernetes.io/instance: che
     app.kubernetes.io/name: che
     app.kubernetes.io/part-of: che.eclipse.org
-  name: che-operator
-  namespace: eclipse-che
+  name: che-operator-leader-election
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: Role
-  name: che-operator
+  name: leader-election-role
 subjects:
 - kind: ServiceAccount
   name: che-operator
