--- a/bundle/next/eclipse-che-preview-openshift/manifests/che-operator.clusterserviceversion.yaml
+++ b/bundle/next/eclipse-che-preview-openshift/manifests/che-operator.clusterserviceversion.yaml
@@ -77,7 +77,7 @@ metadata:
     operators.operatorframework.io/project_layout: go.kubebuilder.io/v3
     repository: https://github.com/eclipse-che/che-operator
     support: Eclipse Foundation
-  name: eclipse-che-preview-openshift.v7.54.0-675.next
+  name: eclipse-che-preview-openshift.v7.54.0-684.next
   namespace: placeholder
 spec:
   apiservicedefinitions: {}
@@ -557,22 +557,14 @@ spec:
               resources:
                 - clusterrolebindings
                 - clusterroles
+                - roles
+                - rolebindings
               verbs:
                 - list
                 - create
                 - watch
                 - update
                 - get
-                - delete
-            - apiGroups:
-                - rbac.authorization.k8s.io
-              resources:
-                - roles
-                - rolebindings
-              verbs:
-                - get
-                - create
-                - update
                 - delete
             - apiGroups:
                 - authorization.openshift.io
@@ -785,26 +777,7 @@ spec:
                 - get
                 - update
                 - watch
-            - apiGroups:
-                - controller.devfile.io
-              resources:
-                - devworkspaceroutings
-              verbs:
-                - '*'
-            - apiGroups:
-                - controller.devfile.io
-              resources:
-                - devworkspaceroutings/finalizers
-              verbs:
-                - update
-            - apiGroups:
-                - controller.devfile.io
-              resources:
-                - devworkspaceroutings/status
-              verbs:
-                - get
-                - patch
-                - update
+                - list
             - apiGroups:
                 - monitoring.coreos.com
               resources:
@@ -838,6 +811,58 @@ spec:
                 - get
                 - list
                 - watch
+            - apiGroups:
+                - workspace.devfile.io
+              resources:
+                - devworkspaces
+                - devworkspacetemplates
+              verbs:
+                - get
+                - list
+                - watch
+                - create
+                - delete
+                - patch
+                - update
+            - apiGroups:
+                - controller.devfile.io
+              resources:
+                - devworkspaceroutings
+                - devworkspaceoperatorconfigs
+              verbs:
+                - get
+                - list
+                - watch
+                - create
+                - delete
+                - patch
+                - update
+            - apiGroups:
+                - controller.devfile.io
+              resources:
+                - devworkspaceroutings/finalizers
+              verbs:
+                - update
+            - apiGroups:
+                - controller.devfile.io
+              resources:
+                - devworkspaceroutings/status
+              verbs:
+                - get
+                - patch
+                - update
+            - apiGroups:
+                - authentication.k8s.io
+              resources:
+                - tokenreviews
+              verbs:
+                - create
+            - apiGroups:
+                - authorization.k8s.io
+              resources:
+                - subjectaccessreviews
+              verbs:
+                - create
           serviceAccountName: che-operator
       deployments:
         - name: che-operator
@@ -993,7 +1018,12 @@ spec:
               resources:
                 - jobs
               verbs:
-                - '*'
+                - create
+                - delete
+                - get
+                - update
+                - watch
+                - list
             - apiGroups:
                 - route.openshift.io
               resources:
@@ -1006,15 +1036,15 @@ spec:
               resources:
                 - roles
                 - rolebindings
-              verbs:
-                - '*'
-            - apiGroups:
-                - rbac.authorization.k8s.io
-              resources:
                 - clusterroles
                 - clusterrolebindings
               verbs:
-                - '*'
+                - list
+                - create
+                - watch
+                - update
+                - get
+                - delete
             - apiGroups:
                 - ""
               resources:
@@ -1138,6 +1168,37 @@ spec:
                 - patch
                 - update
                 - watch
+            - apiGroups:
+                - ""
+              resources:
+                - configmaps
+              verbs:
+                - get
+                - list
+                - watch
+                - create
+                - update
+                - patch
+                - delete
+            - apiGroups:
+                - coordination.k8s.io
+              resources:
+                - leases
+              verbs:
+                - get
+                - list
+                - watch
+                - create
+                - update
+                - patch
+                - delete
+            - apiGroups:
+                - ""
+              resources:
+                - events
+              verbs:
+                - create
+                - patch
           serviceAccountName: che-operator
     strategy: deployment
   installModes:
@@ -1169,7 +1230,7 @@ spec:
   maturity: stable
   provider:
     name: Eclipse Foundation
-  version: 7.54.0-675.next
+  version: 7.54.0-684.next
   webhookdefinitions:
     - admissionReviewVersions:
         - v1
