--- a/config/rbac/kustomization.yaml
+++ b/config/rbac/kustomization.yaml
@@ -21,3 +21,5 @@ resources:
 - role_binding.yaml
 - cluster_role.yaml
 - cluster_rolebinding.yaml
+- leader_election_role.yaml
+- leader_election_role_binding.yaml
