--- a/config/rbac/leader_election_role_binding.yaml
+++ b/config/rbac/leader_election_role_binding.yaml
@@ -13,12 +13,17 @@
 apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
 metadata:
-  name: leader-election-rolebinding
+  name: che-operator-leader-election
+  namespace: eclipse-che
+  labels:
+    app.kubernetes.io/name: che
+    app.kubernetes.io/instance: che
+    app.kubernetes.io/part-of: che.eclipse.org
+    app.kubernetes.io/component: che-operator
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: Role
-  name: leader-election-role
+  name: che-operator-leader-election
 subjects:
 - kind: ServiceAccount
   name: che-operator
-  namespace: system
