--- a/config/rbac/role.yaml
+++ b/config/rbac/role.yaml
@@ -13,12 +13,13 @@
 apiVersion: rbac.authorization.k8s.io/v1
 kind: Role
 metadata:
+  name: che-operator
+  namespace: eclipse-che
   labels:
     app.kubernetes.io/component: che-operator
     app.kubernetes.io/instance: che
     app.kubernetes.io/part-of: che.eclipse.org
     app.kubernetes.io/name: che
-  name: che-operator
 rules:
 - apiGroups:
   - extensions
@@ -37,7 +38,12 @@ rules:
   resources:
   - jobs
   verbs:
-  - '*'
+  - create
+  - delete
+  - get
+  - update
+  - watch
+  - list
 - apiGroups:
   - route.openshift.io
   resources:
@@ -50,15 +56,15 @@ rules:
   resources:
   - roles
   - rolebindings
-  verbs:
-  - '*'
-- apiGroups:
-  - rbac.authorization.k8s.io
-  resources:
   - clusterroles
   - clusterrolebindings
   verbs:
-  - '*'
+    - list
+    - create
+    - watch
+    - update
+    - get
+    - delete
 - apiGroups:
   - ""
   resources:
